--- a/Toronto_Neighborhood_Clustering.ipynb
+++ b/Toronto_Neighborhood_Clustering.ipynb
@@ -33,12 +33,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## Part 1: Scrate Data from Wikipedia"
+    "## Part 1: Scrape Data from Wikipedia"
    ]
   },
   {
